--- a/src/styles/home-styles/products.css
+++ b/src/styles/home-styles/products.css
@@ -3,7 +3,7 @@
   padding-top: var(--main-padding-top);
   background-color: var(--main-color-alt);
   position: relative;
- border-top: black dashed 5px;
+  /* border-top: black dashed 5px; */
 }
 .products .custom-shape-divider-top-1638712956 {
   position: absolute;
@@ -35,14 +35,13 @@
   background-color: transparent;
 }
 
-
-.multi-slider .flicking-camera{
- margin-left: 147px;
+.multi-slider .flicking-camera {
+  margin-left: 147px;
 }
-@media(max-width:530px){
-  .multi-slider .flicking-camera{
+@media (max-width: 530px) {
+  .multi-slider .flicking-camera {
     margin-left: 0;
-   }
+  }
 }
 .multi-slider .box {
   width: 250px;
@@ -78,7 +77,7 @@
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  background-color: rgba(245, 245, 245, 0.450);
+  background-color: rgba(245, 245, 245, 0.45);
   display: flex;
   justify-content: center;
   align-items: center;
